--- a/server-start-hook.service
+++ b/server-start-hook.service
@@ -7,8 +7,8 @@ After=network-online.target
 Type=simple
 User=root
 Group=root
-WorkingDirectory=/home/nomad-workspace
-ExecStart=python3 /home/nomad-workspace/server-start-hook.py --endpoint ||ENDPOINT||
+WorkingDirectory=||WORKSPACE||
+ExecStart=python3 ||WORKSPACE||/server-start-hook.py --endpoint ||ENDPOINT||
 Restart=on-failure
 RestartSec=10
 KillMode=process
