--- a/server-start-hook.service
+++ b/server-start-hook.service
@@ -8,7 +8,7 @@ Type=simple
 User=root
 Group=root
 WorkingDirectory=||WORKSPACE||
-ExecStart=python3 ||WORKSPACE||/server-start-hook.py --endpoint ||ENDPOINT||
+ExecStart=python3 ||WORKSPACE||/server-start-hook.py --endpoint ||ENDPOINT|| --api-key ||API_KEY||
 Restart=on-failure
 RestartSec=10
 KillMode=process
