--- a/php-fpm/pool_sub.conf
+++ b/php-fpm/pool_sub.conf
@@ -10,9 +10,9 @@ php_admin_value[disable_functions] = ||PHP_DISABLE_FUNCTIONS||
 php_admin_value[max_execution_time] = ||PHP_MAX_EXECUTION_TIME||
 php_admin_value[max_input_time] = ||PHP_MAX_INPUT_TIME||
 php_admin_value[max_input_vars] = ||PHP_MAX_INPUT_VARS||
-php_admin_value[memory_limit] = ||PHP_MAX_MEMORY_LIMIT||
-php_admin_value[post_max_size] = ||PHP_POST_MAX_SIZE||
-php_admin_value[upload_max_filesize] = ||PHP_UPLOAD_MAX_FILESIZE||
+php_admin_value[memory_limit] = ||PHP_MAX_MEMORY_LIMIT||M
+php_admin_value[post_max_size] = ||PHP_POST_MAX_SIZE||M
+php_admin_value[upload_max_filesize] = ||PHP_UPLOAD_MAX_FILESIZE||M
 php_admin_value[session.gc_maxlifetime] = ||PHP_SESSION_GC_MAXLIFETIME||
 
 php_admin_flag[allow_url_fopen] = ||PHP_ALLOW_URL_FOPEN||
